--- a/1194.conf
+++ b/1194.conf
@@ -16,7 +16,7 @@ push "redirect-gateway def1"
 push "dhcp-option DNS 8.8.8.8"
 push "dhcp-option DNS 8.8.4.4"
 
-cipher none
+cipher AES-256-CBC
 comp-lzo
 
 keepalive 5 30
